--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 
 <body>
 
-  <div class="disquet">
-    <div class="disquet-top">
+  <div class="diskette">
+    <div class="diskette-top">
       <div class="container-top">
         <div class="metal-left"></div>
         <div class="metal">
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="disquet-down">
+    <div class="diskette-down">
       <div class="down-left">
         <div class="cube"></div>
       </div>
